- Styling: Fixed media element play container for v2 dark mode.

--- a/RockWeb/Styles/styles-v2/blocks/_blocks-cms.scss
+++ b/RockWeb/Styles/styles-v2/blocks/_blocks-cms.scss
@@ -418,30 +418,38 @@
   }
 }
 
-.individual-play-row .individual-play-date,
-.individual-play-row .individual-play-person-location {
-  color: var(--color-interface-medium);
-}
+.individual-plays-container {
 
-.individual-play-person-detail {
-  color: var(--color-interface-soft);
-}
+  .individual-play-row .individual-play-date,
+  .individual-play-row .individual-play-person-location {
+    color: var(--color-interface-medium);
+  }
 
-.individual-play-row .individual-play-bar {
-  background-color: var(--color-interface-softer);
-  border: var(--color-interface-soft) 1px solid;
-}
-
-.individual-play-row .individual-play-chart {
-  background: var(--color-interface-soft);
-}
-
-.individual-play-interaction {
-  background: var(--color-interface-softest);
-
-  .individual-play-interaction-session {
+  .individual-play-person-detail {
     color: var(--color-interface-strong);
   }
+
+  .individual-play-row .individual-play-bar {
+    background-color: var(--color-interface-softer);
+    border: var(--color-interface-soft) 1px solid;
+  }
+
+  .individual-play-row .individual-play-chart {
+    background: var(--color-interface-soft);
+  }
+
+  .individual-play-interaction {
+    background: var(--color-interface-softest);
+
+    .individual-play-interaction-session {
+      color: var(--color-interface-strong);
+    }
+  }
+
+  .individual-play-row .individual-play-bar {
+    background-color: var(--color-interface-softest);
+  }
+
 }
 
 
