--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -22310,29 +22310,28 @@ iframe.email-body {
   border-bottom: none;
 }
 
-.individual-play-row .individual-play-date,
-.individual-play-row .individual-play-person-location {
+.individual-plays-container .individual-play-row .individual-play-date,
+.individual-plays-container .individual-play-row .individual-play-person-location {
   color: var(--color-interface-medium);
 }
-
-.individual-play-person-detail {
-  color: var(--color-interface-soft);
+.individual-plays-container .individual-play-person-detail {
+  color: var(--color-interface-strong);
 }
-
-.individual-play-row .individual-play-bar {
+.individual-plays-container .individual-play-row .individual-play-bar {
   background-color: var(--color-interface-softer);
   border: var(--color-interface-soft) 1px solid;
 }
-
-.individual-play-row .individual-play-chart {
+.individual-plays-container .individual-play-row .individual-play-chart {
   background: var(--color-interface-soft);
 }
-
-.individual-play-interaction {
+.individual-plays-container .individual-play-interaction {
   background: var(--color-interface-softest);
 }
-.individual-play-interaction .individual-play-interaction-session {
+.individual-plays-container .individual-play-interaction .individual-play-interaction-session {
   color: var(--color-interface-strong);
+}
+.individual-plays-container .individual-play-row .individual-play-bar {
+  background-color: var(--color-interface-softest);
 }
 
 .actions.assetmanager-actions {
